feat: Added mutating set of M vertices (#4)